# ytrends

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  yt_cache.sqlite
.github/workflows/: cloudflare-pages-build.yml
mainapp/: admin.py  forms.py  models.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py  0002_alter_video_country_code.py  0002_question_answer_history.py  0003_alter_question_question_category.py  0003_rename_country_code_video_trending_cc.py  0004_alter_video_trending_cc.py  0004_remove_question_answer_history_historicresult.py  0005_alter_historicresult_options_question_latest_answer.py  0005_alter_video_last_updated.py  0006_remove_video_last_updated.py  0006_video_delete_historicresult_delete_question.py  0007_alter_video_trending_cc.py  0007_video_date_fetched_video_video_api_result.py  0008_alter_video_video_api_result.py  0009_alter_video_date_fetched.py  0010_video_country_code.py  0011_video_country_name.py  0012_alter_video_date_fetched.py  0013_alter_video_country_code.py  0014_alter_video_date_fetched.py  0015_country_remove_video_country_code_and_more.py  0016_delete_country_video_country_code_video_country_name.py  0017_country_remove_video_country_code_and_more.py  0018_video_country_alter_country_country_code_and_more.py  0019_remove_video_country.py  0020_video_country.py  0021_alter_video_date_fetched.py  (+1 more)
questionhub/: asgi.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
templates/: 404.html  base.html  contact.html
ytrends/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
(+8 files in other folders)
